# cpp_labs

./: .clang-format  .gitignore  README.md  egot_file.txt  sonar-project.properties
.github/workflows/: build.yml
include/: array.h  functions.h  menu.h
laboratory_work_1/include/: matrix.h
laboratory_work_1/src/: main.cpp  menu.cpp
laboratory_work_3/: .clang-format  CMakeLists.txt  README.md
laboratory_work_3/include/: class_a.h  class_abc.h  class_b.h  const.h  menu.h
laboratory_work_3/src/: class_a.cpp  class_abc.cpp  class_c.cpp  functions.cpp  main.cpp  menu.cpp
laboratory_work_4/: CMakeLists.txt  README.md
laboratory_work_4/include/: animal.h  cat.h  dog.h  functions.h  human.h  mammal.h  menu.h
laboratory_work_4/src/: animal.cpp  cat.cpp  dog.cpp  functions.cpp  human.cpp  main.cpp  mammal.cpp  menu.cpp
laboratory_work_5/: CMakeLists.txt  README.md
laboratory_work_5/include/: function.h  menu.h
laboratory_work_5/src/: main.cpp  menu.cpp
laboratory_work_6/: CMakeLists.txt  README.md
laboratory_work_6/include/: bad_argument.h  class_a.h  class_c.h  functions.h  menu.h
laboratory_work_6/src/: bad_argument.cpp  functions.cpp  menu.cpp
laboratory_work_7/: CMakeLists.txt  README.md  color_file.txt
laboratory_work_7/include/: binary_file.h  car.h  const.h  file_exception.h  file_exception_empty.h  functions.h  menu.h
laboratory_work_7/src/: binary_file.cpp  car.cpp  file_exception.cpp  file_exception_empty.cpp  functions.cpp  main.cpp  menu.cpp
laboratory_work_8/: CMakeLists.txt  README.md
laboratory_work_8/include/: get_input.h  stack.h  stack_algorithms.h  stack_empty_exception.h  stack_iterator.h  stack_menu.h
laboratory_work_8/src/: get_input.cpp  main.cpp  stack_menu.cpp
src/: array.cpp  functions.cpp  main.cpp  menu.cpp
